Arrumando bugs e atualizações gerais
