# src/controllers/inicio.js
@@ -3,8 +3,7 @@ const usuarios = usuariosDados.usuarios;
 
 function boasVindas(req, res, next) {
 	res.status(200).json({
-		Mensagem: `Bem vindos. Esta é a página inicial!
-		Utilize o verbo POST nessa mesma rota e informe seu login e senha no corpo da requisição para fazer login.`,
+		Mensagem: `Bem vindos. Esta é a página inicial! Utilize o verbo POST nessa mesma rota e informe seu login e senha no corpo da requisição para fazer login.`,
 	});
 	next();
 }
